Completed media query two, minor alignment issue persists

--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,105 @@
 body {
   background: papayawhip;
 }
+
+.a {
+  background-color: red;
+  min-height: 33vh;
+  width: 100vw;
+}
+
+.b {
+  background-color: orange;
+  min-height: 33vh;
+  min-width: 66vw;
+}
+
+.c {
+  background-color: yellow;
+}
+
+.d {
+  background-color: greenyellow;
+}
+
+.e {
+  background-color: aqua;
+}
+
+.f {
+  background-color: violet;
+  min-height: 66vh;
+  min-width: 33vw;
+}
+
+.c, .d, .e {
+  min-height: 33vh;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-2 {
+  display: flex;
+  flex-direction: row;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+@media screen and (max-width: 700px) {
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container-2 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .a {
+    min-height: 20vh;
+    width: 100%;
+  }
+
+  .b {
+    min-height: 40vh;
+    width: 100%;
+  }
+
+  .f {
+    min-height: 20vh;
+    width: 100%;
+  }
+
+  .c, .d, .e {
+    min-height: 20vh;
+    width: 100%;
+  }
+
+
+}
